[wcag] Brighten up text in footer to ensure contrast is > 4.5

--- a/ckanext/nhm/theme/less/nhm.less
+++ b/ckanext/nhm/theme/less/nhm.less
@@ -892,6 +892,7 @@ iframe {
   bottom: 0;
   width: 100%;
   z-index: 0;
+  color: @grey6;
 
   .nav {
     margin: 20px 0;
